--- a/public/manifest.json
+++ b/public/manifest.json
@@ -14,13 +14,18 @@
             "type": "image/png"
         },
         {
-            "src": "icons/icon-256x256.png",
-            "sizes": "256x256",
+            "src": "icons/icon-192x192.png",
+            "sizes": "192x192",
             "type": "image/png"
         },
         {
-            "src": "icons/icon-192x192.png",
-            "sizes": "192x192",
+            "src": "icons/icon-152x152.png",
+            "sizes": "152x152",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-144x144.png",
+            "sizes": "144x144",
             "type": "image/png"
         },
         {
@@ -31,6 +36,11 @@
         {
             "src": "icons/icon-96x96.png",
             "sizes": "96x96",
+            "type": "image/png"
+        },
+        {
+            "src": "icons/icon-72X72.png",
+            "sizes": "72x72",
             "type": "image/png"
         }
     ],
