--- a/public/manifest.json
+++ b/public/manifest.json
@@ -39,7 +39,7 @@
             "type": "image/png"
         },
         {
-            "src": "icons/icon-72X72.png",
+            "src": "icons/icon-72x72.png",
             "sizes": "72x72",
             "type": "image/png"
         }
