--- a/public/manifest.json
+++ b/public/manifest.json
@@ -45,7 +45,7 @@
         }
     ],
     "display": "standalone",
-    "start_url": "../index.html",
+    "start_url": "https://budget-tracker-mod19-tlinz.herokuapp.com/index.html",
     "background_color": "#F8F8FF",
     "theme_color": "#ffffff"
 }
