--- a/public/manifest.json
+++ b/public/manifest.json
@@ -45,6 +45,7 @@
         }
     ],
     "display": "standalone",
+    "start_url": "../index.html",
     "id": "/index.html",
     "background_color": "#F8F8FF",
     "theme_color": "#ffffff"
