change name in manifest

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "Food Event",
-    "short_name": "Foodies",
+    "name": "Budget Tracker",
+    "short_name": "Budget",
     "description": "An app that allows you to track your budget.",
     "icons": [
         {
